# ciphers

./: Cargo.toml  README.md
src/: lfsr.rs  main.rs  matrix.rs  skinnyee_boomerang_cli_args.rs  skinnyee_common.rs  skinnyee_plaintext_generator.rs
src/ciphers/: mod.rs  skinny.rs  skinnye_v2.rs  skinnyee.rs
src/differential_characteristics/: mod.rs  sk_boom_rtk_skinnyee.rs  sk_rtk_skinnyee.rs  sk_skinny.rs
