[package]
name = "ciphers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "evaluate-sk-dc-for-skinny"
path = "src/bin/evaluate-sk-dc-for-skinny.rs"

[[bin]]
name = "evaluate-sk-rtk-dc-for-skinnyee"
path = "src/bin/evaluate-sk-rtk-dc-for-skinnyee.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
